--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "core-js": "^3.8.3",
     "sass": "^1.49.9",
     "sass-loader": "^10.1.1",
+    "swiper": "^8.0.7",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1"
   },
